--- a/templates/index.html
+++ b/templates/index.html
@@ -5,45 +5,61 @@
 {% block content %}
 <div class="container">
     <div class="jumbotron">
-        <h1>欢迎来到唐诗的世界！</h1>
+        <h1>唐诗的世界</h1>
         <p>唐朝（618年—907年）二百九十年間，是中國詩歌發展的黃金時代，雲蒸霞蔚，名家輩出，唐詩數量多達五萬首。孫琴安《唐詩選本六百種提要·自序》指出，“唐詩選本經大量散佚，至今尚存三百餘種。當中最流行而家傳戶曉的，要算《唐詩三百首》。”《唐詩三百首》选诗范围相当广泛，收錄了77家詩，共311首，在數量以杜甫詩數多，有39首、李白詩33首、王維詩29首、李商隱詩24首、孟浩然诗14首。是仿《詩經》三百篇（共305篇）之作，從前是家絃戶誦的兒童詩教啟蒙書，所以比较浅显，读者容易接受，俗話說：“熟讀唐詩三百首，不會作詩也會吟。”（原序作：「熟讀唐詩三百首，不會吟詩也會吟。」）是中小學生接觸中國古典詩歌最好的入門書籍。</p>
-        <p align="right"><a class="btn btn-primary btn-lg" href="https://zh.wikipedia.org/wiki/唐诗三百首" role="button">维基百科</a></p>
-        <p align="right"><a class="btn btn-primary btn-lg" href="http://baike.baidu.com/link?url=jrERh8X9Hmm-AlHorlQIdr-yP5fB_BHpeYJkkN-Y1HhXHQLq4m74b-VSrBV9PJSwyiGiyI9Ujq6zovZpt4TEXqQFvrQoTonibktsSBV8Lp1aHXRyMsb24f_EQljZLZNk8gSUYIAUAYKwCbPzyv2RUa" role="button">百度百科</a></p>
+        <div class="container">
+	        <div class="row clearfix">
+		        <div class="col-md-12 column"  align="right">
+			        <div class="btn-group">
+				        <button class="btn btn-default" href="https://zh.wikipedia.org/wiki/唐诗三百首" type="button">维基百科</button>
+                        <button class="btn btn-default" href="http://baike.baidu.com/link?url=jrERh8X9Hmm-AlHorlQIdr-yP5fB_BHpeYJkkN-Y1HhXHQLq4m74b-VSrBV9PJSwyiGiyI9Ujq6zovZpt4TEXqQFvrQoTonibktsSBV8Lp1aHXRyMsb24f_EQljZLZNk8gSUYIAUAYKwCbPzyv2RUa" type="button">百度百科</button>
+                        <button class="btn btn-default" href="https://book.douban.com/subject/1146536/" type="button">豆瓣</button>
+			        </div>
+		        </div>
+            </div>
+        </div>
     </div>
 </div>
+
 <div class="container">
 	<div class="row clearfix">
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
+        <div class="col-md-12 column">
+			<div class="page-header">
+				<h2 align="center">
+					今日唐诗
+				</h2>
+			</div>
+		</div>
+		<div class="col-md-3 column">
+			<h3>
+				行宫-元稹
+			</h3>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				 <a class="btn" href="#">View details »</a>
+				寥落古行宫，宫花寂寞红。</br>白头宫女在，闲坐说玄宗。
 			</p>
 		</div>
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
+		<div class="col-md-3 column">
+			<h3>
+				送友人-李白
+			</h3>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
-			</p>
-			<p>
-				 <a class="btn" href="#">View details »</a>
+				青山横北郭，白水绕东城。</br>此地一为别，孤蓬万里征。</br>浮云游子意，落日故人情。</br>挥手自兹去，萧萧班马鸣。
 			</p>
 		</div>
-		<div class="col-md-4 column">
-			<h2>
-				Heading
-			</h2>
+		<div class="col-md-3 column">
+			<h3>
+				登幽州台歌-陈子昂
+			</h3>
 			<p>
-				Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui.
+				前不见古人，后不见来者。</br>念天地之悠悠，独怆然而涕下。
 			</p>
+		</div>
+        <div class="col-md-3 column">
+			<h3>
+				感遇·兰叶春葳蕤-张九龄
+			</h3>
 			<p>
-				 <a class="btn" href="#">View details »</a>
+				兰叶春葳蕤，桂华秋皎洁。</br>欣欣此生意，自尔为佳节。</br>谁知林栖者，闻风坐相悦。</br>草木有本心，何求美人折？
 			</p>
 		</div>
 	</div>
