--- a/templates/base.html
+++ b/templates/base.html
@@ -1,6 +1,6 @@
 {% extends "bootstrap/base.html" %}
 
-{% block title %}TANGPOEMS{% endblock %}
+{% block title %}唐诗三百首{% endblock %}
 
 {% block navbar %}
 <div class="navbar navbar-inverse" role="navigation">
