唐诗分类展示 & 诗单独页面

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,7 +18,7 @@
             <ul class="nav navbar-nav">
                 <li><a href="/">主页</a></li>
                 <li><a href="/poems">诗目</a></li>
-                <li><a href="/">诗人</a></li>
+                <!--<li><a href="/">诗人</a></li>-->
             </ul>
         </div>
     </div>
