--- a/templates/poem.html
+++ b/templates/poem.html
@@ -7,18 +7,31 @@
 	<div class="row clearfix">
 		<div class="col-md-12 column">
             <div class="jumbotron well">
-                <h1>
+                <h1 align="center">
                     {{title}}
                 </h1>
-                <p class="poem">
-
-                </p>
-                <p>
-                    <a class="btn btn-primary btn-large" href="#">Learn more</a>
-                </p>
+                <h3 class="author" align="center"></h3>
+                <p class="poem" align="center"></p>
             </div>
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript">
+    $(document).ready(function () {
+        var title = decodeURI(document.URL.split('/').pop());
+        $.getJSON("../static/poems.json",function(result){
+            $.each(result, function(i, data){
+                if (data.title == title){
+                    $(".author").append(data.author);
+                    $(".poem").append(data.poem.replace(/\。/g,"\。</br>"));
+                };
+            });
+        });
+    });
+</script>
 {% endblock %}
 
