--- a/app/templates/poem.html
+++ b/app/templates/poem.html
@@ -19,19 +19,7 @@
 {% endblock %}
 
 {% block scripts %}
-{{ super() }}
-<script type="text/javascript">
-    $(document).ready(function () {
-        var title = decodeURI(document.URL.split('/').pop());
-        $.getJSON("../static/poems.json",function(result){
-            $.each(result, function(i, data){
-                if (data.title == title){
-                    $(".author").append(data.author);
-                    $(".poem").append(data.poem.replace(/\。/g,"\。</br>"));
-                };
-            });
-        });
-    });
-</script>
+    {{ super() }}
+    <script type="text/javascript" src="../static/poem.js"></script>
 {% endblock %}
 
