--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,7 +22,7 @@
 </div>
 
 <div class="container">
-	<div class="row clearfix">
+	<div class="row clearfix randomPoems">
         <div class="col-md-12 column">
 			<div class="page-header">
 				<h2 align="center">
@@ -30,7 +30,7 @@
 				</h2>
 			</div>
 		</div>
-		<div class="col-md-3 column">
+		<!-- <div class="col-md-3 column">
 			<h3>
 				行宫-元稹
 			</h3>
@@ -61,9 +61,13 @@
 			<p>
 				兰叶春葳蕤，桂华秋皎洁。</br>欣欣此生意，自尔为佳节。</br>谁知林栖者，闻风坐相悦。</br>草木有本心，何求美人折？
 			</p>
-		</div>
+		</div> -->
 	</div>
 </div>
 {% endblock %}
 
 
+{% block scripts %}
+{{ super() }}
+<script type="text/javascript" src="static/index.js"></script>
+{% endblock %}
