--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         {% block navbar %}
-            <div class="navbar navbar-inverse" role="navigation">
+            <div class="navbar navbar-default" role="navigation">
                 <div class="container">
                     <div class="navbar-header">
                         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -23,10 +23,16 @@
                     </div>
                     <div class="navbar-collapse collapse">
                         <ul class="nav navbar-nav">
-                            <li class="nav-bar-btn active"><a href="/" >主页</a></li>
+                            <li class="nav-bar-btn active"><a href="/home" >主页</a></li>
                             <li class="nav-bar-btn"><a href="/poems">诗目</a></li>
                             <li><a href="#">诗人</a></li>
                         </ul>
+                        <form class="navbar-form navbar-right">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="Search">
+                            </div>
+                            <button type="submit" class="btn btn-default">搜索</button>
+                        </form>
                     </div>
                 </div>
             </div>
