--- a/app/templates/poem.html
+++ b/app/templates/poem.html
@@ -6,7 +6,7 @@
 <div class="container">
 	<div class="row clearfix">
 		<div class="col-md-12 column">
-            <div class="jumbotron well">
+            <div class="jumbotron">
                 <h1 align="center">
                     {{title}}
                 </h1>
@@ -21,5 +21,6 @@
 {% block scripts %}
     {{ super() }}
     <script type="text/javascript" src="../static/poem.js"></script>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='poem.css') }}"/>
 {% endblock %}
 
