add subdir for css and js & upgrade to python 3.5

--- a/app/templates/poem.html
+++ b/app/templates/poem.html
@@ -20,7 +20,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <script type="text/javascript" src="../static/poem.js"></script>
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='poem.css') }}"/>
+    <script type="text/javascript" src="../static/js/poem.js"></script>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/poem.css') }}"/>
 {% endblock %}
 
