--- a/app/templates/poemlist.html
+++ b/app/templates/poemlist.html
@@ -101,5 +101,5 @@
 
 {% block scripts %}
 {{ super() }}
-<script type="text/javascript" src="static/poemlist.js"></script>
+<script type="text/javascript" src="static/js/poemlist.js"></script>
 {% endblock %}
