--- a/app/templates/start.html
+++ b/app/templates/start.html
@@ -18,7 +18,7 @@
 
 {% block scripts %}
     {{ super() }}
-    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='start.css') }}"/>
+    <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/start.css') }}"/>
     <script
         src="https://code.jquery.com/jquery-3.3.0.min.js"
         integrity="sha256-RTQy8VOmNlT6b2PIRur37p6JEBZUE7o8wPgMvu18MC4="
