--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -5,7 +5,7 @@
         {% block title %}唐诗三百首{% endblock %}
         {% block head %}
             {{ super() }}
-            <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='base.css') }}"/>
+            <link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}"/>
         {% endblock %}
     </head>
     <body>
