--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -26,6 +26,6 @@
 
 {% block scripts %}
 {{ super() }}
-<script type="text/javascript" src="static/index.js"></script>
-<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='index.css') }}"/>
+<script type="text/javascript" src="static/js/index.js"></script>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='css/index.css') }}"/>
 {% endblock %}
