--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -17,7 +17,6 @@
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="/">唐诗三百首</a>
                     </div>
@@ -25,11 +24,16 @@
                         <ul class="nav navbar-nav">
                             <li class="nav-bar-btn active"><a href="/home" >主页</a></li>
                             <li class="nav-bar-btn"><a href="/poems">诗目</a></li>
-                            <li><a href="#">诗人</a></li>
                         </ul>
-                        <form class="navbar-form navbar-right">
+                        <form action="{{ url_for('main.search') }}" method="POST" class="navbar-form navbar-right">
                             <div class="form-group">
-                                <input type="text" class="form-control" placeholder="Search">
+                                <label for="searchOption"></label>
+                                <select class="form-control" name="searchOption" id="searchOption">
+                                    <option selected value="0">诗人</option>
+                                    <option value="1">题目</option>
+                                    <option value="2">内容</option>
+                                </select>
+                                <input type="text" name='keyword' class="form-control" placeholder="Search">
                             </div>
                             <button type="submit" class="btn btn-default">搜索</button>
                         </form>
