--- a/app/templates/poem.html
+++ b/app/templates/poem.html
@@ -7,10 +7,10 @@
 	<div class="row clearfix">
 		<div class="col-md-12 column">
             <div class="jumbotron">
-                <h1 align="center">
+                <h1 align="center" style="color:#921406">
                     {{title}}
                 </h1>
-                <h3 class="author" align="center"></h3>
+                <h3 class="author"  align="center"></h3>
                 <p class="poem" align="center"></p>
             </div>
         </div>
