modify random poems

--- a/app/static/css/index.css
+++ b/app/static/css/index.css
@@ -34,7 +34,7 @@
     background-color: rgb(146, 20, 7);
     color: white;
     padding: 0;
-    width: 24%;
-    margin: 0 0.5%;
+    /* width: 24%;
+    margin: 0 0.5%; */
 }
 
